<?xml version="1.0"?>
<package format="2">
  <name>hiwin_robot_client_library</name>
  <version>0.0.3</version>
  <description>HIWIN Robot Client Library (catkinized)</description>
  <maintainer email="hiwin_robot@hiwin.tw">HIWIN Technologies Corp</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>